pixxy-api-gateway/pixxy-api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pixxy-ingress
  namespace: pixxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   # 👈 THIS IS THE IMPORTANT PART
  rules:
    - host: pixxy.api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pixxy-api-gateway
                port:
                  number: 80
